--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -15,15 +15,15 @@
   <style>    {% block css %} {% endblock %} </style>
   </head>
   <body>      
-    <nav class="navbar navbar-expand-lg navbar-primary bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-primary bg-dark sticky-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="/">Blogs World</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <div class="container mx-3">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <div class="container mx-4">
+            <ul class="navbar-nav me-auto mb-3 mb-lg-0">
               {% if user.is_authenticated %}
               <li class="nav-item">
                 <a class="nav-link {% block add_blogs_active %} {% endblock add_blogs_active %}" href="/add_blogs/">Add Blogs</a>
